add: upgrade newest swiper 8.

--- a/src/configs/font.css
+++ b/src/configs/font.css
@@ -1,4 +1,5 @@
 @font-face {
   font-family: "PingFang SC";
   src: url("~@/assets/fonts/PingFangSC-Regular.woff2") format("woff2");
+  font-display: auto;
 }
